--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "bootstrap-vue": "^2.0.4",
+    "core-js": "^3.3.2",
+    "firebase": "^7.2.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue2-google-maps": "^0.10.7",
+    "vuefire": "^2.2.0",
+    "vuex": "^3.1.1",
     "vue-phaser3": "^2.1.1"
   },
   "devDependencies": {
@@ -19,7 +25,10 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.0.0-beta.3"
+    "eslint-plugin-vue": "^7.0.0-beta.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
