--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --modern",
+    "dev": "vue-cli-service serve",
+    "serve": "serve dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.4",
-    "core-js": "^3.3.2",
+    "core-js": "^3.4.4",
     "firebase": "^7.2.2",
     "vue": "^2.6.10",
+    "vue-phaser3": "^2.1.1",
     "vue-router": "^3.1.3",
     "vue2-google-maps": "^0.10.7",
     "vuefire": "^2.2.0",
     "vuex": "^3.1.1",
-    "vue-phaser3": "^2.1.1"
+    "phaser": "^3.21.0"
   },
   "devDependencies": {
+    "node-sass": "^4.13.0",
+    "serve": "^11.2.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
@@ -26,7 +30,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.0.0-beta.3",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
