--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "bootstrap-vue": "^2.0.4",
     "core-js": "^3.4.4",
     "firebase": "^7.2.2",
+    "phaser": "^3.21.0",
     "vue": "^2.6.10",
     "vue-phaser3": "^2.1.1",
     "vue-router": "^3.1.3",
     "vue2-google-maps": "^0.10.7",
+    "vue3-google-maps": "0.0.1",
     "vuefire": "^2.2.0",
-    "vuex": "^3.1.1",
-    "phaser": "^3.21.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "node-sass": "^4.13.0",
