--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "vue2-google-maps": "^0.10.7",
     "vue3-google-maps": "0.0.1",
     "vuefire": "^2.2.0",
+    "vuetify": "^2.3.10",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "node-sass": "^4.13.0",
-    "serve": "^11.2.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.0.0-beta.3",
-    "sass-loader": "^8.0.0",
+    "fibers": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^8.0.2",
+    "serve": "^11.2.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
